REF: maintain CommandContext; cleanup imports